assets/bundle.css
/* Reusable Variables */
:root {
    --space-xs: .25rem;
    --space-sm: .5rem;
    --space: 1rem;
    --space-lg: 2rem;
    --space-xl: 4rem;
    --space-xxl: 8rem;

    --border-radius: 6px;

    --color-light: #f7f7f7;
    --color-dark: #2e2e2e;
    --color-accent: #572cf2;
    --color-accent-lt: #e1d9fc;
    --color-gray: #808080;
    --color-gray-lt: #e0e0e0;
}


/* HTML RESET //////////////////////////////// */
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

* {
    box-sizing: border-box;
}

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1.5;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

img {
    width: 100%;
}


/* //////////////////////////////////////////// */
/* Layout and base styling stuff */

body {
    background-color: var(--color-light);
    color: var(--color-dark);
    font-family: "Roboto", sans-serif;
    font-size: clamp(18px, 4vmin, 20px);
    font-weight: 300;
    font-optical-sizing: auto;
    font-style: normal;
    font-variation-settings:
        "wdth" 100;
}

.container {
    display: grid;
    grid-template-rows: auto 1fr auto;
    grid-template-areas: "header" "main" "footer";
    gap: var(--space-lg);
    height: 100%;
    min-height: 100vh;
    
}

header,
main,
footer {
    padding: var(--space) clamp(2rem, 10vw, 600px);
    /* max-width: 1200px;
    margin: auto; */
    width: 100%;
}

header {
    grid-area: header;
}

main {
    grid-area: main;
    height: 100%;
}

footer {
    background-color: var(--color-dark);
    color: var(--color-light);
    grid-area: footer;
    padding-top: var(--space-xl);
    padding-bottom: var(--space-xl);
}

footer > .links {
    display: flex;
    gap: var(--space);
    align-items: baseline;
}

@media screen and (max-width: 480px) {
    footer > .links .button {
        display: block;
    }
}

.two-col {
    display: grid;
        grid-template-columns: 1fr 1fr;
        gap: var(--space-lg) var(--space-xl);
        align-items: center;
}

.right-aside {
    display: grid;
        grid-template-columns: 2fr 1fr;
        gap: var(--space-lg) var(--space-xl);
        align-items: start;
}

@media screen and (max-width: 768px) {
    .two-col,
    .right-aside {
        grid-template-columns: 1fr
    }
}

hr {
    background: repeating-linear-gradient(
        45deg,
        transparent,
        transparent 6px,
        var(--color-accent) 6px,
        var(--color-accent) 8px
      );
    border: none;
    height: 10px;
    margin-top: var(--space-xl);
}



/* ///////////////////////////////////////////// */
/* Typography */

h1,
h2,
h3 {
    font-family: "DM Serif Display", serif;
    font-optical-sizing: auto;
    font-style: normal;
    font-variation-settings:
        "wdth" 100;
    font-weight: 900;
    line-height: 1.1;
    margin-bottom: var(--space-sm);
}

h1 {
    font-size: clamp(2rem, 8vmin, 3rem);
}

h2 {
    font-size: clamp(1.75rem, 6vmin, 2rem);
}

h3 {
    font-size: clamp(1.4rem, 4vmin, 1.5rem);
}

h4 {
    line-height: 1.3;
}

a {
    color: var(--color-dark);
    border-bottom: 2px solid var(--color-accent-lt);
    box-shadow: inset 0px -8px 0px var(--color-accent-lt);
    font-weight: 400;
    text-decoration: none;
    transition: all .1s ease;
}

a:hover,
a:focus,
a:active {
    box-shadow: inset 0px -22px 0px var(--color-accent-lt);
}

b {
    font-weight: 600;
}

p + p {
    margin-top: var(--space);
}

p + h1,
p + h2,
p + h3 {
    margin-top: var(--space-xl);
}

p + h3 {
    margin-top: var(--space-lg);
}

h2 + h3 {
    margin-top: var(--space);
}

b {
    font-weight: 400;
}

.note {
    color: var(--color-gray);
    font-size: .9rem;
}

footer .note {
    color: var(--color-gray-lt);
}

.intro {
    font-size: 1.4rem;
}




/* /////////////////////////////////////////// */
/* Nav */
nav {
    display: flex;
        gap: var(--space);
        justify-content: space-between;
        align-items: baseline;
    padding: var(--space) 0;
    margin-bottom: var(--space-lg);
}

nav ul {
    list-style-type: none;
    display: flex;
        gap: var(--space-sm);
        align-items: baseline;
    padding: 0;
    margin: 0;
}

.logo {
    border-bottom: 0;
    box-shadow: none;
}

.logo:hover,
.logo:active,
.logo:focus {
    box-shadow: none;
}

.logo img {
    cursor: pointer;
    height: 1.5rem;
    transition: all .1s ease;
    width: auto;
}

.logo:hover img,
.logo:active img,
.logo:focus img {
    transform: scale(1.1);
}


/* /////////////////////////////////////////// */
/* Project grid on homepage */
.grid {
    display: grid;
        gap: var(--space-lg);
        grid-template-columns: 1fr;
    margin-top: var(--space);
}

@media screen and (min-width: 768px) {
    .grid {
        grid-template-columns: 1fr 1fr;
    }
}

@media screen and (min-width: 1680px) {
    .grid {
        grid-template-columns: 1fr 1fr 1fr 1fr;
    }
}

.project-card {
    box-shadow: 0 0 10px 3px var(--color-gray-lt);
    border-radius: var(--border-radius);
    padding: var(--space-lg);
}

.project-card img {
}



/* /////////////////////////////////////////// */
/* Headshot */
.headshot {
    border-radius: 50%;
    display: flex;
        align-items: center;
    height: 10rem;
    overflow: hidden;
    width: 10rem;
}

.headshot img {
    width: 100%;
}



/* /////////////////////////////////////////// */
/* Datalists */
dl {
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: var(--space-sm);
}

dt {
    font-weight: 700;
}




/* /////////////////////////////////////////// */
/* Buttons */
.button,
a.button {
    appearance: none;
    background-color: var(--color-accent);
    border: 0;
    border-radius: 80px;
    box-shadow: none;
    color: var(--color-light);
    display: inline-block;
    font-size: .9rem;
    font-weight: 600;
    padding: var(--space-sm) var(--space-lg);
    text-align: center;
    transition: all .2s ease;
}

.button:hover,
.button:active,
.button:focus {
    background-color: var(--color-accent-lt);
    color: var(--color-dark);
}



/* ////////////////////////////////////////// */
/* UTILITIES */

/* Flex */

.u-flex {
    display: flex;
        gap: var(--space);
}

.u-flex-wrap {
    flex-wrap: wrap;
}

.u-justify-end {
    justify-content: end;
}

.u-justify-start {
    justify-content: start;
}

.u-justify-center {
    justify-content: center;
}

.u-align-end {
    align-items: end;
}

.u-align-start {
    align-items: start;
}

.u-align-center {
    align-items: center;
}

/* Margin */
.u-push--none {
    margin: 0;
}

.u-push {
    margin: var(--space);
}

.u-push--xs {
    margin: var(--space-xs);
}

.u-push--sm {
    margin: var(--space-sm);
}

.u-push--lg {
    margin: var(--space-lg);
}

.u-push--xl {
    margin: var(--space-xl);
}

.u-push--xxl {
    margin: var(--space-xxl);
}

.u-push-top {
    margin-top: var(--space);
}

.u-push-top--none {
    margin-top: 0;
}

.u-push-top--xs {
    margin-top: var(--space-xs);
}

.u-push-top--sm {
    margin-top: var(--space-sm);
}

.u-push-top--lg {
    margin-top: var(--space-lg);
}

.u-push-top--xl {
    margin-top: var(--space-xl);
}

.u-push-top--xxl {
    margin-top: var(--space-xxl);
}

.u-push-right {
    margin-right: var(--space);
}

.u-push-right--none {
    margin-right: 0;
}

.u-push-right--xs {
    margin-right: var(--space-xs);
}

.u-push-right--sm {
    margin-right: var(--space-sm);
}

.u-push-right--lg {
    margin-right: var(--space-lg);
}

.u-push-right--xl {
    margin-right: var(--space-xl);
}

.u-push-right--xxl {
    margin-right: var(--space-xxl);
}

.u-push-bottom {
    margin-bottom: var(--space);
}

.u-push-bottom--none {
    margin-bottom: 0;
}

.u-push-bottom--xs {
    margin-bottom: var(--space-xs);
}

.u-push-bottom--sm {
    margin-bottom: var(--space-sm);
}

.u-push-bottom--lg {
    margin-bottom: var(--space-lg);
}

.u-push-bottom--xl {
    margin-bottom: var(--space-xl);
}

.u-push-bottom--xxl {
    margin-bottom: var(--space-xxl);
}

.u-push-left {
    margin-left: var(--space);
}

.u-push-left--none {
    margin-left: 0;
}

.u-push-left--xs {
    margin-left: var(--space-xs);
}

.u-push-left--sm {
    margin-left: var(--space-sm);
}

.u-push-left--lg {
    margin-left: var(--space-lg);
}

.u-push-left--xl {
    margin-left: var(--space-xl);
}

.u-push-left--xxl {
    margin-left: var(--space-xxl);
}

/* Padding */
.u-pad--none {
    padding: 0;
}

.u-pad {
    padding: var(--space);
}

.u-pad--xs {
    padding: var(--space-xs);
}

.u-pad--sm {
    padding: var(--space-sm);
}

.u-pad--lg {
    padding: var(--space-lg);
}

.u-pad--xl {
    padding: var(--space-xl);
}

.u-pad-top {
    padding-top: var(--space);
}

.u-pad-top--none {
    padding-top: 0;
}

.u-pad-top--xs {
    padding-top: var(--space-xs);
}

.u-pad-top--sm {
    padding-top: var(--space-sm);
}

.u-pad-top--lg {
    padding-top: var(--space-lg);
}

.u-pad-top--xl {
    padding-top: var(--space-xl);
}

.u-pad-right {
    padding-right: var(--space);
}

.u-pad-right--none {
    padding-right: 0;
}

.u-pad-right--xs {
    padding-right: var(--space-xs);
}

.u-pad-right--sm {
    padding-right: var(--space-sm);
}

.u-pad-right--lg {
    padding-right: var(--space-lg);
}

.u-pad-right--xl {
    padding-right: var(--space-xl);
}

.u-pad-bottom {
    padding-bottom: var(--space);
}

.u-pad-bottom--none {
    padding-bottom: 0;
}

.u-pad-bottom--xs {
    padding-bottom: var(--space-xs);
}

.u-pad-bottom--sm {
    padding-bottom: var(--space-sm);
}

.u-pad-bottom--lg {
    padding-bottom: var(--space-lg);
}

.u-pad-bottom--xl {
    padding-bottom: var(--space-xl);
}

.u-pad-left {
    padding-left: var(--space);
}

.u-pad-left--none {
    padding-left: 0;
}

.u-pad-left--xs {
    padding-left: var(--space-xs);
}

.u-pad-left--sm {
    padding-left: var(--space-sm);
}

.u-pad-left--lg {
    padding-left: var(--space-lg);
}

.u-pad-left--xl {
    padding-left: var(--space-xl);
}

